--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,8 +74,8 @@ jobs:
       - name: Clone lmdeploy
         run: |
           set -ex
-          git clone https://github.com/InternLM/lmdeploy.git ${{ env.LMDEPLOY_PATH }}
-          cd ${{ env.LMDEPLOY_PATH }} && git checkout ${{ env.LMDEPLOY_COMMIT_OR_BRANCH }}
+          git clone https://github.com/JackWeiw/lmdeploy.git ${{ env.LMDEPLOY_PATH }}
+          cd ${{ env.LMDEPLOY_PATH }} && git checkout wt/910_ray
           # git apply ${{env.CI_PATH }}/.github/ci/fix-exit-multi-npu.patch
 
       - name: RunTests
