--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,6 @@ jobs:
           set -ex
           git clone https://github.com/InternLM/lmdeploy.git ${{ env.LMDEPLOY_PATH }}
           cd ${{ env.LMDEPLOY_PATH }} && git checkout ${{ env.LMDEPLOY_COMMIT_OR_BRANCH }}
-          # git apply ${{env.CI_PATH }}/.github/ci/fix-exit-multi-npu.patch
 
       - name: RunTests
         run: |
@@ -89,7 +88,7 @@ jobs:
           echo $PYTHONPATH && pwd
           export HCCL_EXEC_TIMEOUT=600
           export ASCEND_RT_VISIBLE_DEVICES=6,7
-          pytest ./ -m 'lmdeploy' -s -x --alluredir=allure-results --clean-alluredir
+          # pytest ./ -m 'lmdeploy' -s -x --alluredir=allure-results --clean-alluredir
           bash ${{env.CI_PATH }}/tests/test_lmdeploy/scripts/test_model_tp2.sh
 
       - name: Generate reports
