--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,6 @@
 requires = [
     "pyyaml",
     "scikit-build",
-    "setuptools==69.5.1",
+    "setuptools",
 ]
 build-backend = "setuptools.build_meta"
